# Buff

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CI_CHECK_POPULATION.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISION_RECORD_SCHEMA.md  EXECUTION_SAFETY.md  GITHUB_SETTINGS_CHECKLIST.md  LICENSE  Makefile  PROJECT_SCOPE.md  README.md  RISK_POLICY.md  RUN_ME_MAC_LINUX.sh  RUN_ME_WINDOWS.bat  RUN_ME_WINDOWS.ps1  SECURITY.md  STRATEGY_GOVERNANCE.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
docs/: 01_PRODUCT_OVERVIEW_AND_JOURNEYS.md  02_ARCHITECTURE_BOUNDARIES.md  03_CONTRACTS_AND_SCHEMAS.md  04_ROADMAP_AND_DELIVERY_CHECKLIST.md  05_RUNBOOK_DEV_WORKFLOW.md  06_DATA_PLANE_ONLINE.md  06_SYSTEM_EVOLUTION_ROADMAP.md  07_PAPER_LIVE_FUTURES.md  08_RESEARCH_LOOP.md  09_EXECUTION_FUTURE.md  ARCHITECTURE_BOUNDARIES.md  CHATBOT_IMPLEMENTATION.md  CHATBOT_SPEC.md  DECISIONS.md  DECISION_RECORD.md  DELIVERY_CHECKLIST.md  DOCS_AUDIT_REPORT.md  FIRST_RUN.md  FUNDAMENTAL_RISK.md  INDICATOR_CONTRACT.md  MASTER_DEVELOPMENT_PATH.md  MULTI_USER.md  OBSERVABILITY.md  PHASE1_API_CONTRACTS.md  PHASE2_CLOSURE.md  PHASE5_BACKLOG.md  PHASE6_USABLE_PRODUCT.md  PRODUCT_ROADMAP.md  PRODUCT_SPEC.md  PRODUCT_STATUS_SUMMARY.md  PROJECT_SPEC.md  PROJECT_STATE.md  PR_RELEASE_GATE.md  QUICKSTART.md  README.md  REGIME_SEMANTICS.md  RELEASE_GATE.md  RELEASE_PRECHECK.md  REPLAY.md  RISK_MODEL_SPEC.md  (+27 more)
knowledge/: fundamental_glossary.md  fundamental_risk_rules.yaml  glossary.md  market_state_rules.yaml  regime_strategy_families.md  regimes.yaml  schema.yaml  technical_rules.yaml
logs/: stage5_fix_session.txt  stage5_postflight.txt  stage5_preflight.txt
reports/: daily_summary.md  data_quality.json  fundamental_risk_preflight.md  m7_verification_report.md  risk_timeline.json
schemas/: data_quality.schema.json  feature_bundle.schema.json  risk_report.schema.json  strategy_decision.schema.json
scripts/: STOP.ps1  STOP.sh  _orchestrator.py  autopilot.ps1  clouding_list_servers.sh  clouding_power.sh  dev-demo.ps1  dev-demo.sh  dev_start.py  dev_up.ps1  dev_up.sh  docs_pr_autopilot.ps1  export_report.py  generate_phase6_goldens.py  phase6_release_gate.py  real_smoke.py  release_gate.ps1  run_ui_journey.ps1  stop_services.py  verify_m1.py  verify_phase1.py  verify_phase6_stage5.py
src/: cli.py
tests/: conftest.py  test_audit_bundle.py  test_audit_run.py  test_audit_schema.py  test_audit_verify.py  test_b7_reporting.py  test_backtest_harness.py  test_canonical_json_hardening.py  test_chatbot_missing_artifact.py  test_chatbot_read_only.py  test_chatbot_reporting_smoke.py  test_cli.py  test_cli_metadata.py  (+92 more)
(+549 files in other folders)
