[project]
name = "buff"
version = "0.1.0"
description = "Deterministic OHLCV data pipeline: Binance Futures candles to parquet + quality reports"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=1.91.0",
    "fastapi>=0.110.0",
    "numpy<2",
    "pandas>=1.5.0",
    "pydantic>=2.5.0",
    "pyarrow==23.0.1",
    "PyYAML>=6.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.24.0", "pytest>=7.0", "ruff>=0.4", "ta>=0.11.0,<0.12.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Fast unit tests that don't require I/O or network",
    "integration: Slower integration tests with fixtures like tmp_path",
]
# pyarrow emits Pandas4Warning for deprecated pandas internals; this does not impact artifact correctness.
filterwarnings = [
    "ignore::pandas.errors.Pandas4Warning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
